[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "content-moderation-openenv"
version = "1.0.0"
description = "Social media content moderation environment for training AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn==0.42.0",
    "pydantic==2.12.5",
    "openai==2.30.0",
    "requests==2.33.1",
    "python-multipart==0.0.22",
    "openenv-core==0.2.3",
]

[project.scripts]
server = "server:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/abhijithbhat/openenv-project"
Repository = "https://github.com/abhijithbhat/openenv-project"
